# WebRTCStreamer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  format.ps1
browser/: index.html
signaling_server/: signaling-server.py
src/: client.cpp  client.h  client_manager.cpp  client_manager.h  dispatch_queue.cpp  dispatch_queue.h  file_parser.cpp  file_parser.h  h264_file_parser.cpp  h264_file_parser.h  main.cpp  opus_file_parser.cpp  opus_file_parser.h  stream.cpp  stream.h
